Add ops.txt and bukkit games config